Aligning the new 1030x130 ad with content space (BugId:49409)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@61082 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/ads.scss
+++ b/skins/oasis/css/core/ads.scss
@@ -6,8 +6,8 @@
 #LEFT_SKYSCRAPER_2, #LEFT_SKYSCRAPER_3, #HOME_TOP_LEADERBOARD, #TOP_LEADERBOARD, #CORP_TOP_LEADERBOARD, #HUB_TOP_LEADERBOARD {
 	text-align: center;
 	&.jumbo-leaderboard {
-		margin-left: 10px;
-		margin-right: 10px;
+		margin-left: 0;
+		margin-right: 0;
 	}
 	>div {
 		margin-left: auto;
